Refactored Products and various small fixes
Added Identity to CreatedBy instead of string
Fixed file extension issue in AcleUrbanGardensDbContext Configuration
Added Small Grid options to Constants
Added some layout to Admin Index page
Added Bootstrap class btn to Product Create
Added Background image to site layout page

--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Product/Create.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Product/Create.cshtml
@@ -15,7 +15,7 @@
             if (Model.CategoryId != null)
             {
                 <p>
-                    @Html.ActionLink("Back to category detail", "Details", "Category", new { Id = Model.CategoryId }, null)
+                    @Html.ActionLink("Back to category detail", "Details", "Category", new { Id = Model.CategoryId }, new { @class = "btn btn-primary btn-large" })
                 </p>
             }
         }
