--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="background-image:url('../../Content/Images/logo.jpg')">
         @RenderBody()
         <hr />
         <footer>
