--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Admin/Index.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Admin/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Administration Menu";
 }
 
-<h2>Index</h2>
-
-
-<ul>
-    <li>@Html.ActionLink("Administration Panel", "Index", "Admin")</li>
-    <li>@Html.ActionLink("Category Administration", "Index", "Category")</li>
-    <li>@Html.ActionLink("Product Adminsitration", "Index", "Product")</li>
-</ul>
+<div class="container">
+    <br />
+    <div class="jumbotron container-fluid" style="box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);">
+        <h1>@ViewBag.Title</h1>
+        <p>
+            @Html.ActionLink("Administration Panel", "Index", "Admin", null, new { @class = "btn btn-primary btn-large" })
+            @Html.ActionLink("Category Administration", "Index", "Category", null, new { @class = "btn btn-primary btn-large" })
+            @Html.ActionLink("Product Adminsitration", "Index", "Product", null, new { @class = "btn btn-primary btn-large" })
+        </p>
+    </div>
+</div>
